src/css/ganttchart.css
div.gant-t-chart-splitpane {
}

div.gant-t-chart-contentpane {
  overflow: hidden;
}

div.gant-t-chart-contentpane table {
  border-collapse: collapse;
}

tr.task > td, tr.task > th {
  white-space: nowrap;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-right: 2px;
}

tr.task > td {
  border-color: whitesmoke;
  border-bottom-width: 1px;
  border-bottom-style: solid;
}

/**
* TASK PANE
**/
div.gant-t-chart-taskpane {

}

div.gant-t-chart-taskpane-tasks-header {
  position: absolute;
  top: 0px;
  height: 41px;
  padding: 2px;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px;
  border-color: whitesmoke;
  background-color: #dceef9;
  z-index: 10;
}

div.gant-t-chart-taskpane-tasks {
  position: absolute;
  top: 47px;
}

table.gant-t-chart-taskpane-tasks-table {
}

table.gant-t-chart-taskpane-tasks-table > tbody > tr.task > td,
table.gant-t-chart-taskpane-attributes-table  > tbody > tr.task > td {
  padding-left: .5em;
  padding-right: .5em;
}

tr.task > td.task-identity {
  text-align: right;
  border-style: none solid solid solid;
  border-width: 1px;
}

tr.task > td.task-label {
}

tr.task > td.task-label > span.task-toggle {
  position: absolute;
  width: 16px;
  height: 16px;
  margin-left: -14px;
}

tr.task-Summary0 > td.task-label > span.task-toggle {
  cursor: default;
}

tr.task-Summary1 > td.task-label > span.task-toggle {
  cursor: pointer;
}

tr.task-expanded > td.task-label > span.task-toggle {
  background-image: url("../images/toggle-small-icon.png");
}

tr.task-collapsed > td.task-label > span.task-toggle {
  background-image: url("../images/toggle-small-expand-icon.png");
}

tr.task-Summary1 > td.task-label > label {
  font-weight: bold;
}

div.gant-t-chart-taskpane-attributes-header {
  position: absolute;
  height: 45px;
  background-color: #dceef9;
  z-index: 5;
  border-color: whitesmoke;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  border-top-style: solid;
  border-top-width: 1px;
  padding: -1px;
}

div.gant-t-chart-taskpane-attributes-header > div.gant-t-chart-taskpane-attributes-header-item {
  position: absolute;
  top: 0px;
  bottom: 0px;
  padding: 2px;
  border-right-style: solid;
  border-right-width: 1px;
  border-right-color: whitesmoke;
  background-color: #dceef9;
}

div.gant-t-chart-taskpane-attributes {
  position: absolute;
  overflow-x: auto;
  overflow-y: hidden;
  top: 47px;
  bottom: 0px;
  border-style: none none none solid;
  border-width: 1px;
  border-color: whitesmoke;
}

table.gant-t-chart-taskpane-attributes-table > tbody > tr > td {
  border-right-style: solid;
  border-right-width: 1px;
  border-right-color: whitesmoke;
  white-space: nowrap;
  padding-left: 2px;
  padding-right: 2px;
}

/**
* CALENDAR PANE
**/
div.gant-t-chart-calendarpane {
}

.gant-t-chart-calendarpane-header {
  position: absolute;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
}

div.gant-t-chart-calendarpane-body {
  position: absolute;
  top: 47px;
  bottom: 0px;
  z-index: 20;
  overflow-x: auto;
  overflow-y: auto;
  border-bottom-color: #cbdde8;
  border-bottom-style: solid;
}

table.gant-t-chart-calendarpane-body-table {
  border-style: none;
  border-width: 0px;
}

/* calender body */
table.gant-t-chart-calendarpane-body-table > tbody > tr > td > div.task-bar {
  position:absolute;
  z-index:2;
}

table.gant-t-chart-calendarpane-body-table > tbody > tr > td > div.task-bar > div.task-bar-left {
  position:absolute;
  top: 0px;
  left: -1px;
}

table.gant-t-chart-calendarpane-body-table > tbody > tr > td > div.task-bar > div.task-bar-right {
  position:absolute;
  top: 0px;
  right: -1px;
}

table.gant-t-chart-calendarpane-body-table > tbody > tr > td > div.task-bar > div.task-bar-pct-complete,
table.gant-t-chart-calendarpane-body-table > tbody > tr > td > div.task-bar > div.task-bar-pct-work-complete,
table.gant-t-chart-calendarpane-body-table > tbody > tr > td > div.task-bar > div.task-bar-physical-pct-complete {
  position:absolute;
  left: 0px;
  height: 3px;
}

table.gant-t-chart-calendarpane-body-table > tbody > tr > td > div.task-bar > div.task-bar-pct-complete {
  top: 0px;
  background-color: red;
}
table.gant-t-chart-calendarpane-body-table > tbody > tr > td > div.task-bar > div.task-bar-pct-work-complete {
  top: 3px;
  background-color: green;
}
table.gant-t-chart-calendarpane-body-table > tbody > tr > td > div.task-bar > div.task-bar-physical-pct-complete {
  top: 6px;
  background-color: blue;
}

/* not a summary task */
table.gant-t-chart-calendarpane-body-table > tbody > tr.task-Summary0 > td > div.task-bar {
  margin-top: 2px;
  border-width: 1px;
  border-style: solid;
  height: 9px;
}

/* not a critical task */
table.gant-t-chart-calendarpane-body-table > tbody > tr.task-Critical0 > td > div.task-bar {
  border-color: blue;
  background-color: skyblue;
}

/* critical task */
table.gant-t-chart-calendarpane-body-table > tbody > tr.task-Critical1 > td > div.task-bar {
  border-color: red;
  background-color: pink;
}

/* summary task */
table.gant-t-chart-calendarpane-body-table > tbody > tr.task-Summary1 > td > div.task-bar {
  margin-top: 2px;
  border-width: 1px;
  border-style: solid;
  height: 4px;
  border-color: maroon;
  background-color: maroon;
}

table.gant-t-chart-calendarpane-body-table > tbody > tr.task-Summary1 > td > div.task-bar > div.task-bar-left {
  width: 0px;
  height: 0px;
  border-top: 5px solid transparent;
  border-bottom: 5px solid transparent;
  border-left: 5px solid maroon;
}

table.gant-t-chart-calendarpane-body-table > tbody > tr.task-Summary1 > td > div.task-bar > div.task-bar-right {
  width: 0px;
  height: 0px;
  border-top: 5px solid transparent;
  border-bottom: 5px solid transparent;
  border-right: 5px solid maroon;
}

/* milestone task */
table.gant-t-chart-calendarpane-body-table > tbody > tr.task-Milestone1 > td > div.task-bar {
  border-color: transparent;
}
/* ... */

